--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -5,8 +5,8 @@
 
 .btn {
   display: inline-block;
-  width: 100%;
   height: 40px;
+  padding: 0 10px;
   line-height: 40px;
   text-align: center;
   font-size: 14px;
