--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -9,6 +9,7 @@
   padding: 0 10px;
   line-height: 40px;
   text-align: center;
+  vertical-align: middle;
   font-size: 14px;
   font-family: moderat,sans-serif;
   font-weight: 700;
